src/test/ui/parser/macro-mismatched-delim-brace-paren.stderr
error: unexpected closing delimiter: `)`
  --> $DIR/macro-mismatched-delim-brace-paren.rs:6:5
   |
LL | macro_rules! foo { ($($tt:tt)*) => () }
   |                  -                    - ...matches this closing brace
   |                  |
   |                  this opening brace...
...
LL |     )
   |     ^ unexpected closing delimiter

error: this file contains an unclosed delimiter
  --> $DIR/macro-mismatched-delim-brace-paren.rs:7:3
   |
LL | fn main() {
   |           - unclosed delimiter
...
LL | }
   |   ^

error: aborting due to 2 previous errors

